# pjsa-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
app/: __init__.py  database.py  deps.py  main.py  models.py  schemas.py
app/api/: __init__.py
app/api/routers/: __init__.py  auth.py  dashboard.py  orders.py  products.py
app/api/v1/: router.py
app/core/: __init__.py  config.py  security.py  seed.py
app/services/: __init__.py  dashboard.py  order_checkout.py
tests/: test_health.py
